<resources>
    <string name="app_name">NSS DTU</string>
    <string name="nss">National Service Scheme</string>
    <string name="dtu">Delhi Technological University</string>

    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="about_us">About Us</string>
    <string name="contacts">Contacts</string>
    <string name="app_info">App Info</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
