<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks"/>
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app"/>
        <item
            android:id="@+id/nav_app_info"
            android:icon="@drawable/ic_info"
            android:title="@string/app_info"/>
    </group>
</menu>